# Ultra-Light-Fast-Generic-Face-Detector-1MB

./: .gitignore  check_size.py  convert_to_onnx.py  detect_imgs.py  detect_imgs_onnx.py  quantize.py  run_video.py  run_video_adaptive_partitioning.py  run_video_face_detect.py  slim-320-fuse.mnn  slim-Epoch-155-Loss-0.189832041089.pth  slim-Epoch-95-Loss-2-op.onnx  train-version-RFB-480.sh  train-version-RFB-640.sh  train-version-slim-480.sh  train-version-slim-640.sh  train-version-slim-new.sh  train.py  ultraface_py_mnn.py
MNN/: CMakeLists.txt
MNN/mnn/lib/: libMNN.dylib
MNN/src/: UltraFace.cpp  UltraFace.hpp  Vectorization.cpp  Vectorization.hpp  main.cpp  net.cpp  net.h
models/: voc-model-product.txt
models/onnx/: version-slim-320.onnx
vision/datasets/: voc_dataset.py
vision/nn/: condconv.py  mb_tiny.py  mb_tiny_RFB.py
vision/ssd/: mb_tiny_RFB_fd.py  mb_tiny_fd.py  predictor.py  ssd.py  torch_utils.py
vision/utils/: common.py
